# hamid-mahdavi-client

./: CLAUDE.md  Cargo.toml  README.md  app.manifest  app.rc
.github/workflows/: release.yml
src/: cert.rs  config.rs  credentials.rs  download.rs  gui.rs  main.rs  paths.rs  project.rs  proxy.rs  python.rs  report.rs  runner.rs  util.rs
