[package]
name = "hamid-mahdavi-client"
version = "0.1.1"
edition = "2021"
description = "Single-exe launcher for the mhr-cfw VPN client"

[[bin]]
name = "hamid-mahdavi-client"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Cross-platform deps (compile on macOS/Linux for syntax checks too).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"

# Windows-only deps. Everything below is gated so `cargo check` works on
# macOS/Linux while the actual binary only builds for Windows targets.
[target.'cfg(windows)'.dependencies]
native-windows-gui = { version = "1.0", default-features = false, features = ["all"] }
native-windows-derive = "1.0"
winreg = "0.52"

[target.'cfg(windows)'.dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_System_Threading",
]

[build-dependencies]
embed-resource = "2"
